# Scientific-A.I.-Workstation

./: .env.example  .gitignore  .gitmodules  ENV_SETUP.md  README.md  card_drawing_simulator.py  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  repo_dep_graph_app.py  requirements.txt  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.tools.json  vite.config.ts
.github/: copilot-instructions.md
machine-doc/: plugins.snapshot.json  state.schema.json  ui.map.json
saw-workspace/: STUDY_CHECKLIST.md  todo.md
saw-workspace/agent/: agent_workspace.md
saw-workspace/human-context/: API_ENDPOINTS.md  Directory.md  ENV_SETUP.md  IDE_LEFT_SIDEBAR_FILES.md  PLUGIN_SCHEMA.md  dependency_graph.md
saw-workspace/introspection_docs/: README.md  introspections1.yaml  introspections_restults.md  tool_catalog.yaml
saw-workspace/machine-context/: A2UI_DEPLOYMENT.md  DECLARATIVE_UI_DEPLOYMENT.md  ENV_SETUP.md  LOGGING.md  START_HERE.md  api.openai-proxy.json  api_endpoints.json  api_health_report.json  context.json  files.json  plugins.snapshot.json  prompt.json  recent-issues.json  review_doc.md
saw-workspace/machine-context/attestation/: default_probes.v1.json
saw-workspace/machine-context/introspection/: IntrospectionPacket_v1_1.schema.json
saw-workspace/machine-context/security/: CAPS_RULES.md
saw-workspace/machine-context/tools/: tools.catalog.v1.json
saw-workspace/machine-doc/: context.json  prompt.json
saw-workspace/machine-specs/: SAW_MR_HARMONIZED_MIN_v0.1.yaml  a2ui_spec.yaml  agent_server_spec.yaml  agent_spec.yaml  context_hardening.yaml  db_access_spec.yaml  declarative_ui_spec.yaml  dependency_graph.yaml  dev_terminal_and_file_directory_plan.yaml  github_cli_spec.yaml  harden_insight_and_tools.yaml  make_api_endpoints_agent_testable.yaml  module_fullscreen_app_pane_spec.yaml  patch_engine_specs.yaml  repo_intel_lite.yaml  saw_copilot_sdk_spec.yaml  utility_external_tabs_spec.yaml  utility_menu.yaml
saw-workspace/plugins/filter_rows/: plugin.yaml
saw-workspace/plugins/health_check/: plugin.yaml  wrapper.py
saw-workspace/prompts/: SAW_MR_HARMONIZED_MIN_v0.1.yaml  build_patch-database-plugin.md  debug_prompt.md  mr-plugin-env-hash.md
scripts/: copilot_cli.sh  copilot_cli_diag.sh  dev_all.ps1  dev_all.sh  dev_all_linux.sh  dev_all_mac.sh  dev_all_windows.ps1  export_macos_keychain_certs_pem.sh  linux_init.sh  mac_init.sh  nuke_ports_mac.sh  test_saw_copilot_sse.py
scripts/lib/: copilot_server.sh  ports.sh
scripts/sub/: copilot_cli.sh  copilot_cli_diag.sh  copilot_cli_wrapper.sh  export_linux_keychains_certs_pem.sh  export_macos_keychain_certs_pem.sh  linux_init.sh  nuke_ports.sh  test_saw_copilot_sse.py
services/patch_engine/: requirements.txt
services/saw_api/: README.md  requirements.txt
src/: App.tsx  index.css  main.tsx
src/agent/: README.md
src/ai/: client.ts  introspectionValidator.ts  planFallback.ts
src/audio/: webaudio.ts
src/components/: BottomPanel.tsx  ChatPanel.tsx  CodeEditorModal.tsx  ConsoleFullscreenModal.tsx  CrashScreen.tsx  DeveloperPanel.tsx  ErrorBoundary.tsx  FileBrowser.tsx  GoalBox.tsx  Inspector.tsx  LeftSidebar.tsx  ModuleFullscreenModal.tsx  NodeCanvas.tsx  PatchReviewModal.tsx  PipelineBuilder.tsx  PluginBrowser.tsx  PluginBuilderModal.tsx  ReadOnlyFileViewer.tsx  SourceViewer.tsx  TerminalPanel.tsx  TodoPanel.tsx  TopBar.tsx
src/dev/: introspectionClient.ts  runtimeTree.ts  sourceFiles.ts
src/markdown/: todo.ts
src/mock/: ai.ts  codegen.ts  plugins.ts
src/patching/: parsePatchProposal.ts
src/plugins/: workspace.ts
src/store/: hmr.ts  persist.ts  storeTypes.ts  useSawStore.ts
src/store/utils/: id.ts  (+4 more)
src/types/: ai.ts  patch.ts  saw.ts
tools/: api_endpoints_schema.ts  test_vector_rag.py  validate_api_endpoints.ts  validate_api_endpoints_live.ts
tools/repo_intel/: depcruise_graph.mjs
(+198 files in other folders)
