[project]
name = "scientific-ai-workstation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "altair==6.0.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "appnope==0.1.4",
    "asciitree==0.3.3",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "bleach==6.3.0",
    "bokeh==3.8.2",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "distinctipy==1.3.4",
    "distro==1.9.0",
    "executing==2.2.1",
    "faiss-cpu==1.13.2",
    "fastapi==0.115.6",
    "fasteners==0.20",
    "figurl==0.3.1",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "fsspec==2026.1.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "hdmf==4.2.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.3.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-bokeh==4.0.5",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kachery==2.0.2",
    "kilosort==4.1.1",
    "kiwisolver==1.4.9",
    "linkify-it-py==2.0.3",
    "llvmlite==0.46.0",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==2.15.0",
    "neo==0.14.3",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.63.1",
    "numcodecs==0.15.1",
    "numpy==2.3.5",
    "openai==1.58.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "panel==1.8.5",
    "param==2.3.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pgvector==0.3.6",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prettytable==3.17.0",
    "probeinterface==0.3.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.1",
    "psycopg==3.2.13",
    "psycopg-binary==3.2.13",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pygments==2.19.2",
    "pynwb==3.1.3",
    "pyparsing==3.3.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.18",
    "pytz==2025.2",
    "pyviz-comms==3.0.6",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "quantities==0.16.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "ruamel-yaml==0.19.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "simplejson==3.20.2",
    "six==1.17.0",
    "skops==0.13.0",
    "sniffio==1.3.1",
    "sorting-scripts",
    "sortingview==0.14.2",
    "spikeinterface==0.103.0",
    "spikeinterface-gui==0.11.0",
    "stack-data==0.6.3",
    "starlette==0.41.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.1",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uc-micro-py==1.0.3",
    "urllib3==2.6.3",
    "uvicorn==0.34.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "widgetsnbextension==4.0.15",
    "wrapt==2.0.1",
    "xyzservices==2025.11.0",
    "zarr==2.18.7",
    "pip",
    "github-copilot-sdk",
]

[tool.uv.workspace]
members = [
    "saw-workspace/sources/zlab_sorting_script",
]

[tool.uv.sources]
sorting-scripts = { workspace = true }
github-copilot-sdk = { git = "https://github.com/github/copilot-sdk.git", subdirectory = "python" }
